--- a/ros2_docker/old-dockerfiles/Dockerfile.broken
+++ b/ros2_docker/old-dockerfiles/Dockerfile.broken
@@ -17,89 +17,6 @@ ENV LANG=en_US.UTF-8
 ENV LC_ALL=en_US.UTF-8
 
 # -------------------------------------------------------
-# Build + install GStreamer 1.22.12 from source into /usr/local (Jammy ships 1.20)
-# Installs: core + base/good/bad/ugly + libav
-ARG GST_VER=1.22.12
-
-RUN apt-get update && apt-get install -y \
-    # build tooling
-    build-essential \
-    pkg-config \
-    cmake \
-    ninja-build \
-    git \
-    bison \
-    flex \
-    python3 \
-    python3-pip \
-    # gstreamer deps
-    libglib2.0-dev \
-    liborc-0.4-dev \
-    libunwind-dev \
-    libdw-dev \
-    libssl-dev \
-    libjpeg-dev \
-    libpng-dev \
-    libx264-dev \
-    libx265-dev \
-    libvpx-dev \
-    libvorbis-dev \
-    libopus-dev \
-    libtheora-dev \
-    libspeex-dev \
-    libmp3lame-dev \
-    libaom-dev \
-    libass-dev \
-    libdrm-dev \
-    libgbm-dev \
-    libegl1-mesa-dev \
-    libgl1-mesa-dev \
-    libwayland-dev \
-    libx11-dev \
-    libxv-dev \
-    libxext-dev \
-    libxrender-dev \
-    libpulse-dev \
-    libasound2-dev \
-    libbz2-dev \
-    zlib1g-dev \
-    libgudev-1.0-dev \
-    libmount-dev \
-    libgirepository1.0-dev \
-    gobject-introspection \
-    gettext \
-    ca-certificates \
-    libavcodec-dev \
-    libavformat-dev \
-    libavutil-dev \
-    libavfilter-dev \
-    libavdevice-dev \
-    libswscale-dev \
-    libswresample-dev \
- && rm -rf /var/lib/apt/lists/*
-
-RUN mkdir -p /usr/local/bin && \
-    pip3 install --no-cache-dir --upgrade "meson>=0.62"
-
-RUN set -eux; \
-    cd /tmp; \
-    for m in gstreamer gst-plugins-base gst-plugins-good gst-plugins-bad gst-plugins-ugly gst-libav; do \
-      curl -fsSL "https://gstreamer.freedesktop.org/src/${m}/${m}-${GST_VER}.tar.xz" -o "${m}.tar.xz"; \
-      tar -xf "${m}.tar.xz"; \
-      cd "${m}-${GST_VER}"; \
-      /usr/local/bin/meson setup build --prefix=/usr/local --buildtype=release; \
-      ninja -C build; \
-      ninja -C build install; \
-      cd /tmp; \
-      rm -rf "${m}-${GST_VER}" "${m}.tar.xz"; \
-    done; \
-    ldconfig
-
-# Make sure /usr/local wins at runtime for GStreamer
-ENV LD_LIBRARY_PATH=/usr/local/lib:/usr/local/lib/aarch64-linux-gnu:${LD_LIBRARY_PATH}
-ENV PKG_CONFIG_PATH=/usr/local/lib/pkgconfig:/usr/local/lib/aarch64-linux-gnu/pkgconfig:${PKG_CONFIG_PATH}
-
-# -------------------------------------------------------
 # ROS 2 + MAVROS + Camera tools + Python + colcon + rosdep
 RUN apt-get update && apt-get install -y \
     ros-humble-mavros \
@@ -109,15 +26,14 @@ RUN apt-get update && apt-get install -y \
     ros-humble-image-view \
     python3-colcon-common-extensions \
     python3-rosdep \
+    python3-pip \
     python3-dev \
     python3-setuptools \
     python3-virtualenv \
  && rm -rf /var/lib/apt/lists/*
 
 # -------------------------------------------------------
-# Build + install OpenCV 4.6.0 from source into /usr/local (Jammy ships 4.5)
-ARG OPENCV_VER=4.6.0
-
+# Build tools + utilities (kept from your original list, minus apt OpenCV/GStreamer packages)
 RUN apt-get update && apt-get install -y \
     gcc-12 \
     g++-12 \
@@ -144,41 +60,15 @@ RUN apt-get update && apt-get install -y \
     python3-gi-cairo \
     gir1.2-gtk-3.0 \
     x11-utils \
-    libgtk-3-dev \
-    libtbb-dev \
-    libtiff-dev \
-    libopenexr-dev \
-    libv4l-dev \
-    python3-numpy \
  && rm -rf /var/lib/apt/lists/*
 
 RUN pip3 install --no-cache-dir yq
 
-RUN set -eux; \
-    cd /tmp; \
-    git clone --branch "${OPENCV_VER}" --depth 1 https://github.com/opencv/opencv.git; \
-    mkdir -p /tmp/opencv/build; \
-    cd /tmp/opencv/build; \
-    cmake -D CMAKE_BUILD_TYPE=Release \
-          -D CMAKE_INSTALL_PREFIX=/usr/local \
-          -D WITH_GSTREAMER=ON \
-          -D WITH_FFMPEG=ON \
-          -D WITH_V4L=ON \
-          -D WITH_QT=OFF \
-          -D BUILD_TESTS=OFF \
-          -D BUILD_PERF_TESTS=OFF \
-          -D BUILD_EXAMPLES=OFF \
-          -D BUILD_opencv_python3=ON \
-          ..; \
-    cmake --build . -j"$(nproc)"; \
-    cmake --install .; \
-    ldconfig; \
-    rm -rf /tmp/opencv
-
 # -------------------------------------------------------
 # MAVROS geographic datasets
-RUN rosdep init || true && rosdep update && \
+RUN set -eux; \
     /opt/ros/${ROS_DISTRO}/lib/mavros/install_geographiclib_datasets.sh
+
 
 # -------------------------------------------------------
 # HailoRT Install
@@ -216,6 +106,13 @@ RUN apt-get update && apt-get install -y \
     gstreamer1.0-x \
  && rm -rf /var/lib/apt/lists/*
 
+ RUN apt-get update && apt-get install -y \
+    libgirepository1.0-dev \
+    gobject-introspection \
+    pkg-config \
+    libopencv-dev \
+    python3-opencv \
+ && rm -rf /var/lib/apt/lists/*
 
 ARG TAPPAS_ZIP=tappas_3.31.0_linux_installer.zip
 ARG TAPPAS_DIR=tappas_v3.31.0
