--- a/ros2_ws/src/mavros_gcs/package.xml
+++ b/ros2_ws/src/mavros_gcs/package.xml
@@ -12,6 +12,7 @@
   <depend>mavros_msgs</depend>
   <depend>nav_msgs</depend>
   <depend>geometry_msgs</depend>
+  <depend>teleop_msgs</depend>
 
   <exec_depend>python3-rich</exec_depend>
   <exec_depend>python3-pymavlink</exec_depend>
